Add adjustment capability

--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +627,7 @@
        "[340 rows x 5 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
        "[159926 rows x 4 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1233,54 +1233,54 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>7559</th>\n",
        "      <td>0006_146.9</td>\n",
-       "      <td>1510.7</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1535</td>\n",
+       "      <td>1644.7</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>1671</td>\n",
        "      <td>-18.0</td>\n",
-       "      <td>1500.0</td>\n",
+       "      <td>1700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0006_149.9</td>\n",
-       "      <td>1559.7</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1585</td>\n",
-       "      <td>856.0</td>\n",
+       "      <th>3734</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1710.3</td>\n",
+       "      <td>2028</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>1738</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>1700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11351</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>1862.2</td>\n",
+       "      <td>2032</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>1892</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>1900.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15221</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>2086.2</td>\n",
+       "      <td>2042</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>2120</td>\n",
+       "      <td>-18.0</td>\n",
+       "      <td>2100.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19126</th>\n",
+       "      <td>0006_146.9</td>\n",
+       "      <td>2371.3</td>\n",
+       "      <td>2050</td>\n",
+       "      <td>0.984</td>\n",
+       "      <td>2409</td>\n",
+       "      <td>-18.0</td>\n",
        "      <td>2400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0006_150.6</td>\n",
-       "      <td>1755.8</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1784</td>\n",
-       "      <td>657.0</td>\n",
-       "      <td>2400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0006_152.6</td>\n",
-       "      <td>2495.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>2536</td>\n",
-       "      <td>-119.0</td>\n",
-       "      <td>2400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0006_152.9</td>\n",
-       "      <td>3725.4</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9593</td>\n",
-       "      <td>3883</td>\n",
-       "      <td>-124.0</td>\n",
-       "      <td>3800.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1293,91 +1293,91 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23074</th>\n",
-       "      <td>WFRC_8261</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <th>11350</th>\n",
+       "      <td>WFRC_8266</td>\n",
+       "      <td>4370.0</td>\n",
+       "      <td>2023</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23075</th>\n",
-       "      <td>WFRC_8263</td>\n",
-       "      <td>7783.9</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>7125</td>\n",
-       "      <td>2427.0</td>\n",
-       "      <td>9600.0</td>\n",
+       "      <th>7558</th>\n",
+       "      <td>WFRC_8266</td>\n",
+       "      <td>5616.7</td>\n",
+       "      <td>2028</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23076</th>\n",
-       "      <td>WFRC_8264</td>\n",
-       "      <td>12940.8</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>11846</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>15220</th>\n",
+       "      <td>WFRC_8266</td>\n",
+       "      <td>7538.4</td>\n",
+       "      <td>2032</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23077</th>\n",
-       "      <td>WFRC_8265</td>\n",
-       "      <td>4036.0</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>3694</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <th>19125</th>\n",
+       "      <td>WFRC_8266</td>\n",
+       "      <td>8180.1</td>\n",
+       "      <td>2042</td>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23078</th>\n",
        "      <td>WFRC_8266</td>\n",
        "      <td>8362.2</td>\n",
        "      <td>2050</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>0.000</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>23079 rows × 7 columns</p>\n",
+       "<p>19345 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            SEGID   DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  \\\n",
-       "0      0006_146.9   1510.7  2019     0.9840     1535          -18.0   \n",
-       "1      0006_149.9   1559.7  2019     0.9840     1585          856.0   \n",
-       "2      0006_150.6   1755.8  2019     0.9840     1784          657.0   \n",
-       "3      0006_152.6   2495.6  2019     0.9840     2536         -119.0   \n",
-       "4      0006_152.9   3725.4  2019     0.9593     3883         -124.0   \n",
-       "...           ...      ...   ...        ...      ...            ...   \n",
-       "23074   WFRC_8261     18.9  2050     0.0000        0            0.0   \n",
-       "23075   WFRC_8263   7783.9  2050     1.0924     7125         2427.0   \n",
-       "23076   WFRC_8264  12940.8  2050     1.0924    11846            NaN   \n",
-       "23077   WFRC_8265   4036.0  2050     1.0924     3694            NaN   \n",
-       "23078   WFRC_8266   8362.2  2050     0.0000        0            0.0   \n",
+       "            SEGID  DY_VOL  YEAR  FAC_WDAVG  modAADT  aadtAdjFactor  \\\n",
+       "7559   0006_146.9  1644.7  2023      0.984     1671          -18.0   \n",
+       "3734   0006_146.9  1710.3  2028      0.984     1738          -18.0   \n",
+       "11351  0006_146.9  1862.2  2032      0.984     1892          -18.0   \n",
+       "15221  0006_146.9  2086.2  2042      0.984     2120          -18.0   \n",
+       "19126  0006_146.9  2371.3  2050      0.984     2409          -18.0   \n",
+       "...           ...     ...   ...        ...      ...            ...   \n",
+       "11350   WFRC_8266  4370.0  2023      0.000        0            0.0   \n",
+       "7558    WFRC_8266  5616.7  2028      0.000        0            0.0   \n",
+       "15220   WFRC_8266  7538.4  2032      0.000        0            0.0   \n",
+       "19125   WFRC_8266  8180.1  2042      0.000        0            0.0   \n",
+       "23078   WFRC_8266  8362.2  2050      0.000        0            0.0   \n",
        "\n",
        "       modForecast  \n",
-       "0           1500.0  \n",
-       "1           2400.0  \n",
-       "2           2400.0  \n",
-       "3           2400.0  \n",
-       "4           3800.0  \n",
+       "7559        1700.0  \n",
+       "3734        1700.0  \n",
+       "11351       1900.0  \n",
+       "15221       2100.0  \n",
+       "19126       2400.0  \n",
        "...            ...  \n",
-       "23074          0.0  \n",
-       "23075       9600.0  \n",
-       "23076          NaN  \n",
-       "23077          NaN  \n",
+       "11350          0.0  \n",
+       "7558           0.0  \n",
+       "15220          0.0  \n",
+       "19125          0.0  \n",
        "23078          0.0  \n",
        "\n",
-       "[23079 rows x 7 columns]"
+       "[19345 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1388,12 +1388,20 @@
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
     "dfModWithAdj['modForecast'] = (dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding)\n",
     "\n",
-    "dfModWithAdj"
+    "\n",
+    "# remove 2019 since it is base\n",
+    "dfModWithAdjNo2019 = dfModWithAdj[dfModWithAdj['YEAR']>2019]\n",
+    "\n",
+    "# sort\n",
+    "dfModWithAdjNo2019 = dfModWithAdjNo2019.sort_values(by=['SEGID', 'YEAR'], ascending=[True, True])\n",
+    "\n",
+    "\n",
+    "dfModWithAdjNo2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1615,13 +1623,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "# export final file\n",
-    "dfModWithAdj.to_csv('intermediate/model-forecasts.csv', index=False)"
+    "dfModWithAdjNo2019.to_csv('intermediate/model-forecasts.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
