--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -1146,6 +1146,7 @@
     "    ['NoReview'    , 'Not Reviewed'                          ],\n",
     "    ['<Previous'   , 'Less than previous forecast year'      ],\n",
     "    ['>2xPrevious' , 'More than twice previous forecast year'],\n",
+    "    ['2050>2x2019' , '2050 More than twice 2019'             ],\n",
     "    ['Zero'        , 'Zero volume'                           ]\n",
     "], columns=('flagName','flagDescription'))\n",
     "\n",
