Move ForecastSegments back to results folder

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[3722 rows x 13 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -528,10 +528,10 @@
     {
      "data": {
       "text/plain": [
-       "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\_site\\\\data\\\\ForecastSegments\\\\ForecastSegments.shp'"
+       "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\results\\\\ForecastSegments\\\\ForecastSegments.shp'"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -556,9 +556,11 @@
     "    # Get the flag criteria from the 'flagCriteria' column (if needed)\n",
     "    flag_criteria = row['flagCriteria']\n",
     "\n",
-    "    # Add a new column to 'dfSegs' with the flag name and set it equal to evaluated criteria\n",
+    "    # Add a new column to 'dfSegs' with the flag name and set it equal to evaluated criteria, prepare criteria string with replace\n",
     "    expression = \"_sdf['\" + flag_name + \"'] = \" + flag_criteria.replace(\"[\", \"_sdf['\").replace(\"]\", \"']\")\n",
     "    print(expression)\n",
+    "\n",
+    "    # execute expression!\n",
     "    exec(expression)\n",
     "    #print(result)  # Output will be 11\n",
     "    \n",
@@ -569,12 +571,12 @@
     "sdfSegmentsWData = _sdf\n",
     "\n",
     "# export\n",
-    "sdfSegmentsWData.spatial.to_featureclass('_site/data/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
+    "sdfSegmentsWData.spatial.to_featureclass('results/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +936,7 @@
        "[8727 rows x 27 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
