Fix flags and aadt col name

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,9 +38,9 @@
     "\n",
     "# flag name must be short enough to be in dbf column name\n",
     "dfFlags = pd.DataFrame([\n",
-    "    ['FL_NOREV' , 'Not Reviewed'                          ,\"([ADJ2023]==-1) | ([ADJ2028]==-1) | ([ADJ2032]==-1) | ([ADJ2042]==-1) | ([ADJ2050]==-1)\"],\n",
+    "    ['FL_NOREV' , 'Not reviewed'                          ,\"([ADJ2023]==-1) | ([ADJ2028]==-1) | ([ADJ2032]==-1) | ([ADJ2042]==-1) | ([ADJ2050]==-1)\"],\n",
     "    ['FL_LTPRV' , 'Less than previous forecast year'      ,\"(([MF2023]+[ADJ2023])<[AADT2019]) | (([MF2028]+[ADJ2028])<([MF2023]+[ADJ2023])) | (([MF2032]+[ADJ2032])<([MF2028]+[ADJ2028])) | (([MF2042]+[ADJ2042])<([MF2032]+[ADJ2032])) | (([MF2050]+[ADJ2050])<([MF2042]+[ADJ2042]))\"],\n",
-    "    ['FL_502X19', '2050 More than twice 2019'             ,\"(([MF2050]+[ADJ2050])>(2*[AADT2019]+[ADJ2050]))\"],\n",
+    "    ['FL_502X19', '2050 more than twice 2019'             ,\"(([MF2050]+[ADJ2050])>(2*[AADT2019]+[ADJ2050]))\"],\n",
     "    ['FL_ZERO'  , 'Zero volume'                           ,\"(([MF2023]+[ADJ2023])==0) | (([MF2028]+[ADJ2028])==0) | (([MF2032]+[ADJ2032])==0) | (([MF2042]+[ADJ2042])==0) | (([MF2050]+[ADJ2050])==0)\"]\n",
     "], columns=('flagName','flagDescription','flagCriteria'))\n",
     "\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[3722 rows x 13 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\results\\\\ForecastSegments\\\\ForecastSegments.shp'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +936,7 @@
        "[8727 rows x 27 columns]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
