--- a/3-Prepare-Model-Forecasts.ipynb
+++ b/3-Prepare-Model-Forecasts.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -315,150 +315,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SEGID</th>\n",
-       "      <th>DY_VOL</th>\n",
-       "      <th>YEAR</th>\n",
-       "      <th>FAC_WDAVG</th>\n",
-       "      <th>modAADT</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0006_146.9</td>\n",
-       "      <td>1510.7</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1535</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0006_149.9</td>\n",
-       "      <td>1559.7</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1585</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0006_150.6</td>\n",
-       "      <td>1755.8</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>1784</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0006_152.6</td>\n",
-       "      <td>2495.6</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9840</td>\n",
-       "      <td>2536</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0006_152.9</td>\n",
-       "      <td>3725.4</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>0.9593</td>\n",
-       "      <td>3883</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23026</th>\n",
-       "      <td>WFRC_8261</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23027</th>\n",
-       "      <td>WFRC_8263</td>\n",
-       "      <td>7783.9</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>7125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23028</th>\n",
-       "      <td>WFRC_8264</td>\n",
-       "      <td>12940.8</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>11846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23029</th>\n",
-       "      <td>WFRC_8265</td>\n",
-       "      <td>4036.0</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>1.0924</td>\n",
-       "      <td>3694</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23030</th>\n",
-       "      <td>WFRC_8266</td>\n",
-       "      <td>8362.2</td>\n",
-       "      <td>2050</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>23031 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SEGID   DY_VOL  YEAR  FAC_WDAVG  modAADT\n",
-       "0      0006_146.9   1510.7  2019     0.9840     1535\n",
-       "1      0006_149.9   1559.7  2019     0.9840     1585\n",
-       "2      0006_150.6   1755.8  2019     0.9840     1784\n",
-       "3      0006_152.6   2495.6  2019     0.9840     2536\n",
-       "4      0006_152.9   3725.4  2019     0.9593     3883\n",
-       "...           ...      ...   ...        ...      ...\n",
-       "23026   WFRC_8261     18.9  2050     0.0000        0\n",
-       "23027   WFRC_8263   7783.9  2050     1.0924     7125\n",
-       "23028   WFRC_8264  12940.8  2050     1.0924    11846\n",
-       "23029   WFRC_8265   4036.0  2050     1.0924     3694\n",
-       "23030   WFRC_8266   8362.2  2050     0.0000        0\n",
-       "\n",
-       "[23031 rows x 5 columns]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "KeyError",
+     "evalue": "'modAadt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\bhereth\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3628\u001b[0m             \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3629\u001b[1;33m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3630\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\bhereth\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\bhereth\\Anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'modAadt'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_9180\\2422515509.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;31m# Convert to integer as you had before\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m \u001b[0m_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'modAadt'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'modAadt'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[0mdfmodAadt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_df\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\bhereth\\Anaconda3\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3503\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3504\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3505\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3506\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3507\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\bhereth\\Anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py\u001b[0m in \u001b[0;36mget_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3629\u001b[0m                 \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3630\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3631\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3632\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3633\u001b[0m                 \u001b[1;31m# If we have a listlike key, _check_indexing_error will raise\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'modAadt'"
+     ]
     }
    ],
    "source": [
@@ -475,9 +354,9 @@
     "_df['modAADT'] = np.where(mask_zero_denominator, 0, _df['DY_VOL'] / _df[colWeekdayFactor])\n",
     "\n",
     "# Convert to integer as you had before\n",
-    "_df['modAADT'] = _df['modAADT'].astype(int)\n",
+    "_df['modAadt'] = _df['modAadt'].astype(int)\n",
     "\n",
-    "dfModAadt = _df\n",
+    "dfmodAadt = _df\n",
     "\n",
     "# Display the DataFrame\n",
     "display(dfModAadt)"
@@ -485,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +787,7 @@
     "_df = _df.loc[idx]\n",
     "\n",
     "_df = _df[['SEGID','AADT']]\n",
-    "_df.rename(columns={'AADT':'obsAADT'}, inplace=True)\n",
+    "_df.rename(columns={'AADT':'obsAadt'}, inplace=True)\n",
     "\n",
     "dfObsAadt_BaseYear = _df\n",
     "\n",
@@ -917,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1161,13 +1040,13 @@
     "# CALCULATE ADJUSTMENT FACTOR FROM BASE YEAR MODEL VS OBSERVED\n",
     "dfModAadt_BaseYear = dfModAadt[dfModAadt['YEAR']==2019]\n",
     "\n",
-    "_df = pd.DataFrame.merge(dfModAadt_BaseYear[['SEGID','modAADT']], dfObsAadt_BaseYear[['SEGID','obsAADT']], on='SEGID', how='left')\n",
+    "_df = pd.DataFrame.merge(dfModAadt_BaseYear[['SEGID','modAadt']], dfObsAadt_BaseYear[['SEGID','obsAadt']], on='SEGID', how='left')\n",
     "_df.fillna(0,inplace=True)\n",
-    "_df['aadtAdjFactor'] = _df['obsAADT'] - _df['modAADT']\n",
+    "_df['aadtAdjFactor'] = _df['obsAadt'] - _df['modAadt']\n",
     "\n",
-    "_df.loc[(_df['modAADT']==0), 'aadtAdjFactor'] = 0\n",
+    "_df.loc[(_df['modAadt']==0), 'aadtAdjFactor'] = 0\n",
     "\n",
-    "display(_df[_df['modAADT']==0])\n",
+    "display(_df[_df['modAadt']==0])\n",
     "\n",
     "dfModAdjFactor = _df[['SEGID','aadtAdjFactor']]\n",
     "\n",
@@ -1176,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1198,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1265,7 @@
     "# ADJUST ALL MODEL VOLUMES BASED ON BASE YEAR ADJ FACTOR\n",
     "\n",
     "dfModWithAdj = pd.DataFrame.merge(dfModAadt, dfModAdjFactor, on='SEGID', how='left')\n",
-    "dfModWithAdj['modForecast'] = (dfModWithAdj['modAADT'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding)\n",
+    "dfModWithAdj['modForecast'] = (dfModWithAdj['modAadt'] + dfModWithAdj['aadtAdjFactor']).apply(custom_rounding)\n",
     "\n",
     "\n",
     "# remove 2019 since it is base\n",
@@ -1401,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1616,14 +1495,14 @@
     "\n",
     "_df3 = pd.DataFrame.merge(_df1, _df2, on='SEGID')\n",
     "\n",
-    "_df3['ModVsObs'] = _df3['modForecast'] - _df3['obsAADT']\n",
+    "_df3['ModVsObs'] = _df3['modForecast'] - _df3['obsAadt']\n",
     "\n",
     "display(_df3[_df3['ModVsObs']!=0])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
