Change no review flag

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "# flag name must be short enough to be in dbf column name\n",
     "dfFlags = pd.DataFrame([\n",
-    "    ['FL_NOREV' , 'Not reviewed'                          ,\"([ADJ2023]==-1) | ([ADJ2028]==-1) | ([ADJ2032]==-1) | ([ADJ2042]==-1) | ([ADJ2050]==-1)\"],\n",
+    "    ['FL_NOREV' , 'Not reviewed'                          ,\"([NOTES]=='')\"],\n",
     "    ['FL_LTPRV' , 'Less than previous forecast year'      ,\"(([MF2023]+[ADJ2023])<[AADT2019]) | (([MF2028]+[ADJ2028])<([MF2023]+[ADJ2023])) | (([MF2032]+[ADJ2032])<([MF2028]+[ADJ2028])) | (([MF2042]+[ADJ2042])<([MF2032]+[ADJ2032])) | (([MF2050]+[ADJ2050])<([MF2042]+[ADJ2042]))\"],\n",
     "    ['FL_502X19', '2050 more than twice 2019'             ,\"(([MF2050]+[ADJ2050])>(2*[AADT2019]+[ADJ2050]))\"],\n",
     "    ['FL_ZERO'  , 'Zero volume'                           ,\"(([MF2023]+[ADJ2023])==0) | (([MF2028]+[ADJ2028])==0) | (([MF2032]+[ADJ2032])==0) | (([MF2042]+[ADJ2042])==0) | (([MF2050]+[ADJ2050])==0)\"]\n",
