Include 2019 data in forecasts

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -440,19 +440,19 @@
        "      <th>3720</th>\n",
        "      <td>WFRC_8263</td>\n",
        "      <td>1.0924</td>\n",
-       "      <td>2427.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>4245.0</td>\n",
        "      <td>5503.0</td>\n",
        "      <td>6511.0</td>\n",
        "      <td>6667.0</td>\n",
        "      <td>6888.0</td>\n",
        "      <td>7125.0</td>\n",
+       "      <td>4200.0</td>\n",
+       "      <td>5500.0</td>\n",
+       "      <td>6500.0</td>\n",
        "      <td>6700.0</td>\n",
-       "      <td>7900.0</td>\n",
-       "      <td>8900.0</td>\n",
-       "      <td>9100.0</td>\n",
-       "      <td>9300.0</td>\n",
-       "      <td>9600.0</td>\n",
+       "      <td>6900.0</td>\n",
+       "      <td>7100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3721</th>\n",
@@ -488,7 +488,7 @@
        "3717   WFRC_8259     0.0000            0.0     0.0     0.0     0.0     0.0   \n",
        "3718   WFRC_8260     0.0000            0.0     0.0     0.0     0.0     0.0   \n",
        "3719   WFRC_8261     0.0000            0.0     0.0     0.0     0.0     0.0   \n",
-       "3720   WFRC_8263     1.0924         2427.0  4245.0  5503.0  6511.0  6667.0   \n",
+       "3720   WFRC_8263     1.0924            0.0  4245.0  5503.0  6511.0  6667.0   \n",
        "3721   WFRC_8266     0.0000            0.0     0.0     0.0     0.0     0.0   \n",
        "\n",
        "YEAR   M2042   M2050  MF2019  MF2023  MF2028  MF2032  MF2042  MF2050  \n",
@@ -501,13 +501,13 @@
        "3717     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0  \n",
        "3718     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0  \n",
        "3719     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0  \n",
-       "3720  6888.0  7125.0  6700.0  7900.0  8900.0  9100.0  9300.0  9600.0  \n",
+       "3720  6888.0  7125.0  4200.0  5500.0  6500.0  6700.0  6900.0  7100.0  \n",
        "3721     0.0     0.0     0.0     0.0     0.0     0.0     0.0     0.0  \n",
        "\n",
        "[3722 rows x 15 columns]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\results\\\\ForecastSegments\\\\ForecastSegments.shp'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,6 +565,7 @@
     "_sdf = pd.DataFrame.merge(dfModVolAdj, sdfSegments, on='SEGID', how='right')\n",
     "\n",
     "# add columns for Adjustments - SET AS -1 to initialize... CODE RECOGNIZES #1 \n",
+    "_sdf['ADJ2019'] = 0\n",
     "_sdf['ADJ2023'] = 0\n",
     "_sdf['ADJ2028'] = 0\n",
     "_sdf['ADJ2032'] = 0\n",
@@ -601,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +916,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>8727 rows × 29 columns</p>\n",
+       "<p>8727 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -958,10 +959,10 @@
        "8725     True     False     False    False  \n",
        "8726     True     False     False     True  \n",
        "\n",
-       "[8727 rows x 29 columns]"
+       "[8727 rows x 30 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
