--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +507,7 @@
        "[3722 rows x 15 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -548,16 +548,6 @@
       "_sdf['FL_502X19'] = ((_sdf['MF2050']+_sdf['ADJ2050'])>(2*_sdf['AADT2019']+_sdf['ADJ2050']))\n",
       "_sdf['FL_ZERO'] = ((_sdf['MF2023']+_sdf['ADJ2023'])==0) | ((_sdf['MF2028']+_sdf['ADJ2028'])==0) | ((_sdf['MF2032']+_sdf['ADJ2032'])==0) | ((_sdf['MF2042']+_sdf['ADJ2042'])==0) | ((_sdf['MF2050']+_sdf['ADJ2050'])==0)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'e:\\\\GitHub\\\\Traffic-Volume-Forecasts\\\\results\\\\ForecastSegments\\\\ForecastSegments.shp'"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -597,12 +587,12 @@
     "sdfSegmentsWData = _sdf\n",
     "\n",
     "# export\n",
-    "sdfSegmentsWData.spatial.to_featureclass('results/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
+    "#sdfSegmentsWData.spatial.to_featureclass('results/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +952,7 @@
        "[8727 rows x 30 columns]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,10 +978,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEGID</th>\n",
+       "      <th>EDITKEY</th>\n",
+       "      <th>ADJ2023</th>\n",
+       "      <th>ADJ2028</th>\n",
+       "      <th>ADJ2032</th>\n",
+       "      <th>ADJ2042</th>\n",
+       "      <th>ADJ2050</th>\n",
+       "      <th>NOTES</th>\n",
+       "      <th>TIMESTAMP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>dummy</td>\n",
+       "      <td>dummy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>dummy</td>\n",
+       "      <td>2023-08-23 15:06:15.675156</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SEGID EDITKEY  ADJ2023  ADJ2028  ADJ2032  ADJ2042  ADJ2050  NOTES  \\\n",
+       "0  dummy   dummy        0        0        0        0        0  dummy   \n",
+       "\n",
+       "                   TIMESTAMP  \n",
+       "0 2023-08-23 15:06:15.675156  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "\n",
+    "# empty log file for AGOL\n",
+    "dfLogFile = pd.DataFrame([\n",
+    "    ['dummy','dummy',0,0,0,0,0,'dummy',datetime.datetime.now()]\n",
+    "],columns=('SEGID','EDITKEY','ADJ2023','ADJ2028','ADJ2032','ADJ2042','ADJ2050','NOTES','TIMESTAMP'))\n",
+    "\n",
+    "dfLogFile.to_csv('results/forecasts-logfile.csv')\n",
+    "\n",
+    "dfLogFile"
+   ]
   }
  ],
  "metadata": {
