Add additional model fields to table under chart

--- a/4-Prepare-Forecast-App-Data.ipynb
+++ b/4-Prepare-Forecast-App-Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import arcpy\n",
     "from arcgis import GIS\n",
     "gis = GIS()\n",
-    "import json"
+    "import json\n",
+    "\n",
+    "bShapefileExport = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +509,7 @@
        "[3722 rows x 15 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -587,12 +589,12 @@
     "sdfSegmentsWData = _sdf\n",
     "\n",
     "# export\n",
-    "#sdfSegmentsWData.spatial.to_featureclass('results/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
+    "if bShapefileExport: sdfSegmentsWData.spatial.to_featureclass('results/ForecastSegments/ForecastSegments.shp',sanitize_columns=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +954,7 @@
        "[8727 rows x 30 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1026,7 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>dummy</td>\n",
-       "      <td>2023-08-23 15:06:15.675156</td>\n",
+       "      <td>2023-08-29 16:09:24.592477</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1035,10 +1037,10 @@
        "0  dummy   dummy        0        0        0        0        0  dummy   \n",
        "\n",
        "                   TIMESTAMP  \n",
-       "0 2023-08-23 15:06:15.675156  "
+       "0 2023-08-29 16:09:24.592477  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,6 +1057,13 @@
     "\n",
     "dfLogFile"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
